--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">map thing</string>
+    <string name="light_mode_toggle">Toggle Light/Dark Mode</string>
 </resources>
